Fix gallery style for desktop on safari

--- a/src/styles/contents/gallery.css
+++ b/src/styles/contents/gallery.css
@@ -8,13 +8,7 @@
   top: 0;
   width: 100%;
 }
-.gallery-video-wrapper .video-screen {
-  max-height: calc(100vh - 130px); /* Viewport height minus nav and video controls */
-  width: 100%;
-}
 .gallery-image-wrapper {
-  height: calc(100vh - 130px);
-  width: 100%;
 }
 .gallery-image {
   height: 100%;
@@ -24,7 +18,13 @@
 .gallery-video-wrapper, 
 .gallery-image-wrapper {
   aspect-ratio: 16/9;
-  max-width: calc(100% - 120px);
+  max-width: 1280px;
+  max-height: calc(100vh - 70px); /* Viewport height minus nav */
+  width: 100%;
+}
+.gallery-video-wrapper .video-screen {
+  max-height: calc(100vh - 130px); /* Viewport height minus nav and video controls */
+  width: 100%;
 }
 .gallery-nav {
   align-items: center;
